tests/negative/ImplicitPatternLeftApplication.juvix
module ImplicitPatternLeftApplication;

f : {A : Type} -> A -> A;
f ({x} y) := y;

